--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "flexsearch": "^0.7.43",
+    "vitepress": "^1.6.3",
+    "vitepress-plugin-search": "^1.0.4-alpha.22"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
