--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "devDependencies": {
-    "flexsearch": "^0.7.43",
     "vitepress": "^1.6.3",
-    "vitepress-plugin-search": "^1.0.4-alpha.22"
+    "vitepress-sidebar": "^1.31.1"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
