--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "vitepress": "^1.6.3",
-    "vitepress-sidebar": "^1.31.1"
+    "vitepress-plugin-nprogress": "^0.0.4"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
@@ -9,6 +9,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@catppuccin/vitepress": "^0.1.2"
+    "@catppuccin/vitepress": "^0.1.2",
+    "vitepress-markdown-timeline": "^1.2.2"
   }
 }
