--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "markdown-it-mathjax3": "^4.3.2",
+    "mermaid": "^11.6.0",
     "vitepress": "^1.6.3",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-nprogress": "^0.0.4"
   },
   "scripts": {
